k8s/neo4j-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-2
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j-2
spec:
  type: ClusterIP
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    protocol: TCP
    name: bolt
  selector:
    app: neo4j-2
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-external-2
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j-2
spec:
  type: NodePort
  ports:
  - port: 7474
    targetPort: 7474
    nodePort: 30475
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    nodePort: 30688
    protocol: TCP
    name: bolt
  selector:
    app: neo4j-2
