k8s/neo4j-service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-3
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j-3
spec:
  type: ClusterIP
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    protocol: TCP
    name: bolt
  selector:
    app: neo4j-3
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-external-3
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j-3
spec:
  type: NodePort
  ports:
  - port: 7474
    targetPort: 7474
    nodePort: 30476
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    nodePort: 30689
    protocol: TCP
    name: bolt
  selector:
    app: neo4j-3
