k8s/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j
spec:
  type: ClusterIP
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    protocol: TCP
    name: bolt
  selector:
    app: neo4j
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-external
  namespace: ray-ste-adv-daba-26
  labels:
    app: neo4j
spec:
  type: NodePort
  ports:
  - port: 7474
    targetPort: 7474
    nodePort: 30474
    protocol: TCP
    name: http
  - port: 7687
    targetPort: 7687
    nodePort: 30687
    protocol: TCP
    name: bolt
  selector:
    app: neo4j
