k8s/neo4j-ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-ingress-3
  namespace: ray-ste-adv-daba-26
spec:
  ingressClassName: nginx-ext
  rules:
    - host: ray-ste-adv-daba-26-3.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-3
                port:
                  number: 7474
